@@ -2,6 +2,13 @@ Routes Changelog
 ========================
 
 -- 1.4.1 (**SVN**)
+* Added sub_domains option to mapper, along with sub_domains_ignore list for 
+  subdomains that are considered equivilant to the main domain. When sub_domains
+  is active, url_for will now take a sub_domain option that can alter the host
+  the route will go to.
+* Added ability for filter functions to provide a _host, _protocol, _anchor arg
+  which is then used to create the URL with the appropriate host/protocol/anchor
+  destination.
 * Patch applied from Ticket #28. Resolves issue with Mapper's controller_scan
   function requiring a valid directory argument. Submitted by Zoran Isailovski.
 
